# serializer version: 1
# name: test_area_by_layer[sample1, min_size 10000]
  list([
    np.float64(399998474.12109375),
    np.float64(86811828.61328125),
    np.float64(59712219.23828125),
    np.float64(14396667.48046875),
    0,
  ])
# ---
# name: test_area_by_layer[sample1, no min_size]
  list([
    np.float64(399998474.12109375),
    np.float64(86857604.98046875),
    np.float64(59719848.6328125),
    np.float64(14404296.875),
    np.float64(1525.87890625),
  ])
# ---
# name: test_area_by_layer[sample2, no min_size]
  list([
    np.float64(159999.609375),
    np.float64(136148.4375),
    np.float64(74932.421875),
    np.float64(15160.9375),
    np.float64(0.390625),
  ])
# ---
# name: test_area_pores[sample1]
  list([
    list([
      np.float64(399998474.12109375),
    ]),
    list([
      np.float64(297546.38671875),
      np.float64(187683.10546875),
      np.float64(2426147.4609375),
      np.float64(13227844.23828125),
      np.float64(39672.8515625),
      np.float64(64086.9140625),
      np.float64(4577.63671875),
      np.float64(16784.66796875),
      np.float64(80871.58203125),
      np.float64(1341247.55859375),
      np.float64(7637023.92578125),
      np.float64(4618835.44921875),
      np.float64(22888.18359375),
      np.float64(6547546.38671875),
      np.float64(1525.87890625),
      np.float64(6809997.55859375),
      np.float64(149536.1328125),
      np.float64(547790.52734375),
      np.float64(4312133.7890625),
      np.float64(1525.87890625),
      np.float64(26747131.34765625),
      np.float64(28991.69921875),
      np.float64(4577.63671875),
      np.float64(1525.87890625),
      np.float64(1525.87890625),
      np.float64(1289367.67578125),
      np.float64(3051.7578125),
      np.float64(6103.515625),
      np.float64(3051.7578125),
      np.float64(13732.91015625),
      np.float64(3051.7578125),
      np.float64(213623.046875),
      np.float64(2124023.4375),
      np.float64(9155.2734375),
      np.float64(15258.7890625),
      np.float64(910949.70703125),
      np.float64(1852416.9921875),
      np.float64(3166198.73046875),
      np.float64(25939.94140625),
      np.float64(1902770.99609375),
      np.float64(6103.515625),
      np.float64(140380.859375),
      np.float64(53405.76171875),
    ]),
    list([
      np.float64(172424.31640625),
      np.float64(1577758.7890625),
      np.float64(9231567.3828125),
      np.float64(437927.24609375),
      np.float64(3332519.53125),
      np.float64(5632019.04296875),
      np.float64(329589.84375),
      np.float64(4870605.46875),
      np.float64(485229.4921875),
      np.float64(16784.66796875),
      np.float64(5039978.02734375),
      np.float64(291442.87109375),
      np.float64(820922.8515625),
      np.float64(553894.04296875),
      np.float64(19078063.96484375),
      np.float64(825500.48828125),
      np.float64(386047.36328125),
      np.float64(396728.515625),
      np.float64(7629.39453125),
      np.float64(12207.03125),
      np.float64(73242.1875),
      np.float64(1350402.83203125),
      np.float64(212097.16796875),
      np.float64(276184.08203125),
      np.float64(900268.5546875),
      np.float64(1681518.5546875),
      np.float64(822448.73046875),
      np.float64(317382.8125),
      np.float64(196838.37890625),
      np.float64(317382.8125),
      np.float64(73242.1875),
    ]),
    list([
      np.float64(59509.27734375),
      np.float64(111389.16015625),
      np.float64(251770.01953125),
      np.float64(1525.87890625),
      np.float64(273132.32421875),
      np.float64(245666.50390625),
      np.float64(347900.390625),
      np.float64(308227.5390625),
      np.float64(160217.28515625),
      np.float64(99182.12890625),
      np.float64(259399.4140625),
      np.float64(419616.69921875),
      np.float64(138854.98046875),
      np.float64(222778.3203125),
      np.float64(350952.1484375),
      np.float64(105285.64453125),
      np.float64(187683.10546875),
      np.float64(108337.40234375),
      np.float64(207519.53125),
      np.float64(274658.203125),
      np.float64(245666.50390625),
      np.float64(152587.890625),
      np.float64(430297.8515625),
      np.float64(100708.0078125),
      np.float64(144958.49609375),
      np.float64(170898.4375),
      np.float64(299072.265625),
      np.float64(196838.37890625),
      np.float64(274658.203125),
      np.float64(500488.28125),
      np.float64(73242.1875),
      np.float64(213623.046875),
      np.float64(193786.62109375),
      np.float64(16784.66796875),
      np.float64(158691.40625),
      np.float64(279235.83984375),
      np.float64(155639.6484375),
      np.float64(158691.40625),
      np.float64(349426.26953125),
      np.float64(177001.953125),
      np.float64(6103.515625),
      np.float64(74768.06640625),
      np.float64(404357.91015625),
      np.float64(183105.46875),
      np.float64(1382446.2890625),
      np.float64(788879.39453125),
      np.float64(15258.7890625),
      np.float64(22888.18359375),
      np.float64(398254.39453125),
      np.float64(508117.67578125),
      np.float64(67138.671875),
      np.float64(125122.0703125),
      np.float64(367736.81640625),
      np.float64(230407.71484375),
      np.float64(99182.12890625),
      np.float64(355529.78515625),
      np.float64(164794.921875),
      np.float64(115966.796875),
      np.float64(61035.15625),
      np.float64(160217.28515625),
      np.float64(158691.40625),
      np.float64(236511.23046875),
      np.float64(51879.8828125),
    ]),
    list([
      np.float64(1525.87890625),
    ]),
  ])
# ---
# name: test_area_pores[sample2]
  list([
    list([
      np.float64(159999.609375),
    ]),
    list([
      np.float64(135931.25),
      np.float64(67.578125),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(1.953125),
      np.float64(1.171875),
      np.float64(3.515625),
      np.float64(2.734375),
      np.float64(23.046875),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(3.515625),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(2.734375),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(2.734375),
      np.float64(1.5625),
      np.float64(1.5625),
      np.float64(7.03125),
      np.float64(0.78125),
      np.float64(1.171875),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(1.171875),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(8.203125),
      np.float64(1.953125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(2.734375),
      np.float64(6.25),
      np.float64(1.5625),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(1.5625),
      np.float64(3.515625),
      np.float64(1.5625),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(25.78125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(2.734375),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(3.90625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(2.34375),
      np.float64(0.390625),
      np.float64(2.734375),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(1.5625),
      np.float64(1.5625),
      np.float64(1.5625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(1.5625),
      np.float64(1.5625),
    ]),
    list([
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(5.46875),
      np.float64(0.78125),
      np.float64(74628.515625),
      np.float64(3.90625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(50.0),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(1.953125),
      np.float64(10.9375),
      np.float64(1.5625),
      np.float64(0.390625),
      np.float64(1.171875),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(1.953125),
      np.float64(94.921875),
      np.float64(1.5625),
      np.float64(1.5625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(11.328125),
      np.float64(43.75),
      np.float64(1.5625),
      np.float64(2.34375),
      np.float64(0.390625),
      np.float64(1.5625),
      np.float64(0.78125),
      np.float64(3.515625),
      np.float64(0.78125),
      np.float64(3.125),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(1.5625),
      np.float64(2.734375),
      np.float64(1.171875),
      np.float64(0.390625),
      np.float64(1.171875),
      np.float64(0.390625),
      np.float64(3.125),
      np.float64(0.390625),
      np.float64(4.296875),
      np.float64(0.390625),
      np.float64(7.421875),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(1.953125),
      np.float64(1.5625),
      np.float64(0.390625),
      np.float64(1.953125),
      np.float64(1.171875),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(1.953125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(1.171875),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(1.171875),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(1.5625),
      np.float64(1.171875),
      np.float64(1.171875),
    ]),
    list([
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(5.078125),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(14684.375),
      np.float64(0.390625),
      np.float64(1.5625),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(7.03125),
      np.float64(0.390625),
      np.float64(2.34375),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(1.953125),
      np.float64(7.421875),
      np.float64(1.5625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(1.5625),
      np.float64(0.78125),
      np.float64(0.390625),
      np.float64(181.25),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(3.515625),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(1.953125),
      np.float64(3.125),
      np.float64(1.953125),
      np.float64(0.390625),
      np.float64(1.171875),
      np.float64(0.78125),
      np.float64(1.953125),
      np.float64(0.390625),
      np.float64(137.890625),
      np.float64(0.78125),
      np.float64(94.140625),
      np.float64(1.171875),
      np.float64(0.390625),
      np.float64(0.390625),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(0.78125),
      np.float64(0.78125),
    ]),
    list([
      np.float64(0.390625),
    ]),
  ])
# ---
# name: test_centroid_pores[sample1]
  list([
    list([
      tuple(
        np.float64(9980.430975412275),
        np.float64(9980.44110824054),
      ),
    ]),
    list([
      tuple(
        np.float64(152.84455128205127),
        np.float64(3131.209935897436),
      ),
      tuple(
        np.float64(186.10264227642276),
        np.float64(6253.8109756097565),
      ),
      tuple(
        np.float64(922.1452437106918),
        np.float64(7627.063679245283),
      ),
      tuple(
        np.float64(2702.386917464529),
        np.float64(17576.29556465567),
      ),
      tuple(
        np.float64(818.8100961538462),
        np.float64(12971.754807692309),
      ),
      tuple(
        np.float64(1212.797619047619),
        np.float64(10791.480654761905),
      ),
      tuple(
        np.float64(1419.2708333333333),
        np.float64(8385.416666666666),
      ),
      tuple(
        np.float64(1509.2329545454545),
        np.float64(3980.8238636363635),
      ),
      tuple(
        np.float64(1902.2700471698113),
        np.float64(1052.4764150943397),
      ),
      tuple(
        np.float64(2611.9880546075087),
        np.float64(4153.15699658703),
      ),
      tuple(
        np.float64(4911.330856643357),
        np.float64(12266.7878996004),
      ),
      tuple(
        np.float64(3829.234803435745),
        np.float64(1303.2318508424182),
      ),
      tuple(
        np.float64(2809.8958333333335),
        np.float64(10528.645833333334),
      ),
      tuple(
        np.float64(5193.145901305057),
        np.float64(6915.755724190166),
      ),
      tuple(
        np.float64(5117.1875),
        np.float64(117.1875),
      ),
      tuple(
        np.float64(7736.930736051983),
        np.float64(2810.731990813354),
      ),
      tuple(
        np.float64(6327.327806122449),
        np.float64(18248.565051020407),
      ),
      tuple(
        np.float64(7025.700731197771),
        np.float64(18842.596622562673),
      ),
      tuple(
        np.float64(8558.253715498939),
        np.float64(8169.34271054494),
      ),
      tuple(
        np.float64(7851.5625),
        np.float64(234.375),
      ),
      tuple(
        np.float64(12394.814931684637),
        np.float64(14956.083935906212),
      ),
      tuple(
        np.float64(10197.368421052632),
        np.float64(13168.174342105263),
      ),
      tuple(
        np.float64(10494.791666666666),
        np.float64(5950.520833333333),
      ),
      tuple(
        np.float64(10507.8125),
        np.float64(4765.625),
      ),
      tuple(
        np.float64(10664.0625),
        np.float64(9062.5),
      ),
      tuple(
        np.float64(11527.04326923077),
        np.float64(5323.6871301775145),
      ),
      tuple(
        np.float64(10742.1875),
        np.float64(9082.03125),
      ),
      tuple(
        np.float64(10917.96875),
        np.float64(14238.28125),
      ),
      tuple(
        np.float64(11230.46875),
        np.float64(12460.9375),
      ),
      tuple(
        np.float64(12174.479166666666),
        np.float64(2252.6041666666665),
      ),
      tuple(
        np.float64(13378.90625),
        np.float64(9335.9375),
      ),
      tuple(
        np.float64(14471.54017857143),
        np.float64(110.49107142857143),
      ),
      tuple(
        np.float64(15664.258934985632),
        np.float64(5214.170258620689),
      ),
      tuple(
        np.float64(15039.0625),
        np.float64(6035.15625),
      ),
      tuple(
        np.float64(16777.34375),
        np.float64(984.375),
      ),
      tuple(
        np.float64(17930.0800879397),
        np.float64(16629.501675041876),
      ),
      tuple(
        np.float64(19079.10317133443),
        np.float64(612.7085049423393),
      ),
      tuple(
        np.float64(19129.593373493975),
        np.float64(10940.135542168675),
      ),
      tuple(
        np.float64(18329.503676470587),
        np.float64(19949.448529411766),
      ),
      tuple(
        np.float64(19087.090266639934),
        np.float64(6402.021100641539),
      ),
      tuple(
        np.float64(18750.0),
        np.float64(2607.421875),
      ),
      tuple(
        np.float64(19878.141983695652),
        np.float64(16729.364809782608),
      ),
      tuple(
        np.float64(19928.571428571428),
        np.float64(12392.857142857143),
      ),
    ]),
    list([
      tuple(
        np.float64(117.1875),
        np.float64(3098.0365044247787),
      ),
      tuple(
        np.float64(890.5041102514507),
        np.float64(7671.361218568665),
      ),
      tuple(
        np.float64(2561.3378099173556),
        np.float64(17681.153150826445),
      ),
      tuple(
        np.float64(2304.143074912892),
        np.float64(4273.873040069687),
      ),
      tuple(
        np.float64(3809.5774668040294),
        np.float64(1240.7709478021977),
      ),
      tuple(
        np.float64(4966.176171769168),
        np.float64(12265.984827959903),
      ),
      tuple(
        np.float64(3028.4288194444443),
        np.float64(3961.2268518518517),
      ),
      tuple(
        np.float64(5182.817884555137),
        np.float64(6880.347842261905),
      ),
      tuple(
        np.float64(4759.85161163522),
        np.float64(15927.672955974842),
      ),
      tuple(
        np.float64(5127.840909090909),
        np.float64(19943.18181818182),
      ),
      tuple(
        np.float64(7730.283075991523),
        np.float64(2809.259574629125),
      ),
      tuple(
        np.float64(7054.973821989529),
        np.float64(18800.515379581153),
      ),
      tuple(
        np.float64(7930.195748141264),
        np.float64(8735.115590148698),
      ),
      tuple(
        np.float64(8266.83023415978),
        np.float64(7179.967286501377),
      ),
      tuple(
        np.float64(12434.22828521155),
        np.float64(14933.975220946973),
      ),
      tuple(
        np.float64(9734.21615064695),
        np.float64(8598.515480591497),
      ),
      tuple(
        np.float64(11207.540760869566),
        np.float64(5446.516798418972),
      ),
      tuple(
        np.float64(11859.375),
        np.float64(5149.188701923077),
      ),
      tuple(
        np.float64(13039.0625),
        np.float64(16781.25),
      ),
      tuple(
        np.float64(13813.4765625),
        np.float64(14829.1015625),
      ),
      tuple(
        np.float64(14465.33203125),
        np.float64(46.38671875),
      ),
      tuple(
        np.float64(15679.510946327684),
        np.float64(5191.957980225989),
      ),
      tuple(
        np.float64(17642.760791366905),
        np.float64(16349.20188848921),
      ),
      tuple(
        np.float64(18170.75276243094),
        np.float64(16802.70200276243),
      ),
      tuple(
        np.float64(18874.47033898305),
        np.float64(338.5195974576271),
      ),
      tuple(
        np.float64(19245.37063294011),
        np.float64(10782.313407441015),
      ),
      tuple(
        np.float64(19182.224025974025),
        np.float64(6206.154336734694),
      ),
      tuple(
        np.float64(18757.32421875),
        np.float64(11515.737680288461),
      ),
      tuple(
        np.float64(18825.399709302324),
        np.float64(6745.700096899225),
      ),
      tuple(
        np.float64(19605.994591346152),
        np.float64(1089.8061899038462),
      ),
      tuple(
        np.float64(19895.01953125),
        np.float64(16681.315104166668),
      ),
    ]),
    list([
      tuple(
        np.float64(59.094551282051285),
        np.float64(3037.860576923077),
      ),
      tuple(
        np.float64(135.91609589041096),
        np.float64(16546.982020547945),
      ),
      tuple(
        np.float64(450.5208333333333),
        np.float64(7697.443181818182),
      ),
      tuple(
        np.float64(312.5),
        np.float64(17500.0),
      ),
      tuple(
        np.float64(958.0132681564246),
        np.float64(16932.175279329607),
      ),
      tuple(
        np.float64(1305.560947204969),
        np.float64(17802.067158385093),
      ),
      tuple(
        np.float64(1415.672971491228),
        np.float64(7506.853070175439),
      ),
      tuple(
        np.float64(1697.865099009901),
        np.float64(16984.065594059404),
      ),
      tuple(
        np.float64(1707.5892857142858),
        np.float64(16155.13392857143),
      ),
      tuple(
        np.float64(2285.456730769231),
        np.float64(4179.6875),
      ),
      tuple(
        np.float64(2344.2095588235293),
        np.float64(17708.639705882353),
      ),
      tuple(
        np.float64(2859.375),
        np.float64(882.3863636363636),
      ),
      tuple(
        np.float64(2897.0638736263736),
        np.float64(17070.74175824176),
      ),
      tuple(
        np.float64(3165.667808219178),
        np.float64(17919.78809931507),
      ),
      tuple(
        np.float64(3652.34375),
        np.float64(1078.4646739130435),
      ),
      tuple(
        np.float64(3800.9510869565215),
        np.float64(11925.951086956522),
      ),
      tuple(
        np.float64(3908.473069105691),
        np.float64(19112.360264227642),
      ),
      tuple(
        np.float64(3907.9005281690143),
        np.float64(17262.874119718308),
      ),
      tuple(
        np.float64(4301.183363970588),
        np.float64(6153.205422794118),
      ),
      tuple(
        np.float64(4389.756944444444),
        np.float64(5329.210069444444),
      ),
      tuple(
        np.float64(4432.016692546584),
        np.float64(11244.419642857143),
      ),
      tuple(
        np.float64(4375.0),
        np.float64(16639.0625),
      ),
      tuple(
        np.float64(4579.454787234043),
        np.float64(1235.7324911347519),
      ),
      tuple(
        np.float64(4698.153409090909),
        np.float64(12079.782196969696),
      ),
      tuple(
        np.float64(4803.453947368421),
        np.float64(15842.927631578947),
      ),
      tuple(
        np.float64(5087.541852678572),
        np.float64(6582.03125),
      ),
      tuple(
        np.float64(5219.826211734694),
        np.float64(5765.106823979592),
      ),
      tuple(
        np.float64(5251.332364341085),
        np.float64(12872.456395348838),
      ),
      tuple(
        np.float64(5550.564236111111),
        np.float64(9060.980902777777),
      ),
      tuple(
        np.float64(5706.459603658536),
        np.float64(12040.301067073171),
      ),
      tuple(
        np.float64(5609.537760416667),
        np.float64(8052.571614583333),
      ),
      tuple(
        np.float64(5905.691964285715),
        np.float64(3233.816964285714),
      ),
      tuple(
        np.float64(5944.574311023622),
        np.float64(6415.1697834645665),
      ),
      tuple(
        np.float64(6654.829545454545),
        np.float64(12290.482954545454),
      ),
      tuple(
        np.float64(7538.311298076923),
        np.float64(3420.222355769231),
      ),
      tuple(
        np.float64(7911.116803278688),
        np.float64(8707.095286885246),
      ),
      tuple(
        np.float64(8309.206495098038),
        np.float64(7039.675245098039),
      ),
      tuple(
        np.float64(8316.556490384615),
        np.float64(3044.621394230769),
      ),
      tuple(
        np.float64(8823.348799126637),
        np.float64(2274.3245087336245),
      ),
      tuple(
        np.float64(8984.038254310344),
        np.float64(15595.703125),
      ),
      tuple(
        np.float64(9277.34375),
        np.float64(8457.03125),
      ),
      tuple(
        np.float64(9390.146683673469),
        np.float64(14691.485969387755),
      ),
      tuple(
        np.float64(9963.590801886792),
        np.float64(15617.334905660377),
      ),
      tuple(
        np.float64(10274.739583333334),
        np.float64(14743.489583333334),
      ),
      tuple(
        np.float64(11843.310223509934),
        np.float64(15580.591197571744),
      ),
      tuple(
        np.float64(12154.33087524178),
        np.float64(14088.869076402321),
      ),
      tuple(
        np.float64(11777.34375),
        np.float64(14785.15625),
      ),
      tuple(
        np.float64(11848.958333333334),
        np.float64(16934.895833333332),
      ),
      tuple(
        np.float64(12495.360392720306),
        np.float64(16552.77179118774),
      ),
      tuple(
        np.float64(13147.522522522522),
        np.float64(13575.333145645645),
      ),
      tuple(
        np.float64(12964.311079545454),
        np.float64(18232.421875),
      ),
      tuple(
        np.float64(13208.841463414634),
        np.float64(15853.658536585366),
      ),
      tuple(
        np.float64(13385.794865145228),
        np.float64(17458.344139004148),
      ),
      tuple(
        np.float64(13321.6059602649),
        np.float64(14462.696605960266),
      ),
      tuple(
        np.float64(13325.721153846154),
        np.float64(12790.264423076924),
      ),
      tuple(
        np.float64(14003.319474248927),
        np.float64(13275.885193133046),
      ),
      tuple(
        np.float64(14104.817708333334),
        np.float64(12362.196180555555),
      ),
      tuple(
        np.float64(14237.767269736842),
        np.float64(10656.86677631579),
      ),
      tuple(
        np.float64(14277.34375),
        np.float64(11499.0234375),
      ),
      tuple(
        np.float64(14918.89880952381),
        np.float64(12048.735119047618),
      ),
      tuple(
        np.float64(15108.173076923076),
        np.float64(11051.307091346154),
      ),
      tuple(
        np.float64(19205.645161290322),
        np.float64(277.7217741935484),
      ),
      tuple(
        np.float64(19789.751838235294),
        np.float64(10659.466911764706),
      ),
    ]),
    list([
      tuple(
        np.float64(12304.6875),
        np.float64(15507.8125),
      ),
    ]),
  ])
# ---
# name: test_centroid_pores[sample2]
  list([
    list([
      tuple(
        np.float64(199.68798141597026),
        np.float64(199.68709335227868),
      ),
    ]),
    list([
      tuple(
        np.float64(227.85961064301807),
        np.float64(188.81086307129064),
      ),
      tuple(
        np.float64(3.3092485549132946),
        np.float64(96.33309248554913),
      ),
      tuple(
        np.float64(0.625),
        np.float64(25.3125),
      ),
      tuple(
        np.float64(3.75),
        np.float64(30.3125),
      ),
      tuple(
        np.float64(9.375),
        np.float64(70.0),
      ),
      tuple(
        np.float64(10.75),
        np.float64(72.5),
      ),
      tuple(
        np.float64(11.25),
        np.float64(66.25),
      ),
      tuple(
        np.float64(12.847222222222221),
        np.float64(69.79166666666667),
      ),
      tuple(
        np.float64(13.75),
        np.float64(110.0),
      ),
      tuple(
        np.float64(17.02330508474576),
        np.float64(67.36228813559322),
      ),
      tuple(
        np.float64(15.0),
        np.float64(227.1875),
      ),
      tuple(
        np.float64(15.625),
        np.float64(64.375),
      ),
      tuple(
        np.float64(15.625),
        np.float64(82.8125),
      ),
      tuple(
        np.float64(16.38888888888889),
        np.float64(229.86111111111111),
      ),
      tuple(
        np.float64(19.0625),
        np.float64(228.75),
      ),
      tuple(
        np.float64(20.0),
        np.float64(114.6875),
      ),
      tuple(
        np.float64(20.0),
        np.float64(227.5),
      ),
      tuple(
        np.float64(21.071428571428573),
        np.float64(112.58928571428571),
      ),
      tuple(
        np.float64(23.125),
        np.float64(60.625),
      ),
      tuple(
        np.float64(24.375),
        np.float64(66.25),
      ),
      tuple(
        np.float64(25.446428571428573),
        np.float64(111.60714285714286),
      ),
      tuple(
        np.float64(26.875),
        np.float64(110.9375),
      ),
      tuple(
        np.float64(29.0625),
        np.float64(110.9375),
      ),
      tuple(
        np.float64(32.708333333333336),
        np.float64(111.14583333333333),
      ),
      tuple(
        np.float64(34.375),
        np.float64(107.8125),
      ),
      tuple(
        np.float64(34.375),
        np.float64(110.0),
      ),
      tuple(
        np.float64(34.375),
        np.float64(112.1875),
      ),
      tuple(
        np.float64(34.375),
        np.float64(350.0),
      ),
      tuple(
        np.float64(35.0),
        np.float64(104.375),
      ),
      tuple(
        np.float64(40.625),
        np.float64(102.5),
      ),
      tuple(
        np.float64(41.875),
        np.float64(115.625),
      ),
      tuple(
        np.float64(43.75),
        np.float64(83.125),
      ),
      tuple(
        np.float64(44.375),
        np.float64(158.75),
      ),
      tuple(
        np.float64(45.68452380952381),
        np.float64(194.46428571428572),
      ),
      tuple(
        np.float64(45.75),
        np.float64(210.0),
      ),
      tuple(
        np.float64(49.375),
        np.float64(215.0),
      ),
      tuple(
        np.float64(50.625),
        np.float64(153.125),
      ),
      tuple(
        np.float64(51.25),
        np.float64(164.6875),
      ),
      tuple(
        np.float64(51.875),
        np.float64(183.75),
      ),
      tuple(
        np.float64(54.910714285714285),
        np.float64(176.60714285714286),
      ),
      tuple(
        np.float64(55.0),
        np.float64(183.28125),
      ),
      tuple(
        np.float64(56.875),
        np.float64(175.9375),
      ),
      tuple(
        np.float64(56.875),
        np.float64(276.875),
      ),
      tuple(
        np.float64(58.125),
        np.float64(171.25),
      ),
      tuple(
        np.float64(58.125),
        np.float64(172.8125),
      ),
      tuple(
        np.float64(60.0),
        np.float64(277.1875),
      ),
      tuple(
        np.float64(61.52777777777778),
        np.float64(276.7361111111111),
      ),
      tuple(
        np.float64(63.75),
        np.float64(266.5625),
      ),
      tuple(
        np.float64(66.875),
        np.float64(271.5625),
      ),
      tuple(
        np.float64(68.125),
        np.float64(319.0625),
      ),
      tuple(
        np.float64(72.67992424242425),
        np.float64(313.4943181818182),
      ),
      tuple(
        np.float64(71.875),
        np.float64(306.875),
      ),
      tuple(
        np.float64(75.0),
        np.float64(282.5),
      ),
      tuple(
        np.float64(76.25),
        np.float64(164.375),
      ),
      tuple(
        np.float64(76.875),
        np.float64(311.875),
      ),
      tuple(
        np.float64(78.125),
        np.float64(161.25),
      ),
      tuple(
        np.float64(78.125),
        np.float64(244.6875),
      ),
      tuple(
        np.float64(78.75),
        np.float64(261.875),
      ),
      tuple(
        np.float64(80.0),
        np.float64(317.8125),
      ),
      tuple(
        np.float64(80.0),
        np.float64(325.3125),
      ),
      tuple(
        np.float64(85.0),
        np.float64(279.0625),
      ),
      tuple(
        np.float64(85.625),
        np.float64(323.75),
      ),
      tuple(
        np.float64(88.125),
        np.float64(295.0),
      ),
      tuple(
        np.float64(88.75),
        np.float64(301.5625),
      ),
      tuple(
        np.float64(90.625),
        np.float64(283.75),
      ),
      tuple(
        np.float64(93.30357142857143),
        np.float64(379.19642857142856),
      ),
      tuple(
        np.float64(95.0),
        np.float64(288.125),
      ),
      tuple(
        np.float64(100.0),
        np.float64(300.0),
      ),
      tuple(
        np.float64(102.1875),
        np.float64(399.0625),
      ),
      tuple(
        np.float64(103.75),
        np.float64(398.4375),
      ),
      tuple(
        np.float64(104.375),
        np.float64(294.6875),
      ),
      tuple(
        np.float64(105.0),
        np.float64(368.4375),
      ),
      tuple(
        np.float64(105.0),
        np.float64(399.375),
      ),
      tuple(
        np.float64(110.0),
        np.float64(302.5),
      ),
      tuple(
        np.float64(120.0),
        np.float64(376.5625),
      ),
      tuple(
        np.float64(125.625),
        np.float64(379.0625),
      ),
    ]),
    list([
      tuple(
        np.float64(147.5),
        np.float64(59.6875),
      ),
      tuple(
        np.float64(147.5),
        np.float64(61.25),
      ),
      tuple(
        np.float64(149.19642857142858),
        np.float64(60.535714285714285),
      ),
      tuple(
        np.float64(150.0),
        np.float64(0.3125),
      ),
      tuple(
        np.float64(304.47813126475404),
        np.float64(184.07544661317255),
      ),
      tuple(
        np.float64(151.75),
        np.float64(9.0625),
      ),
      tuple(
        np.float64(153.75),
        np.float64(85.3125),
      ),
      tuple(
        np.float64(155.0),
        np.float64(13.75),
      ),
      tuple(
        np.float64(155.0),
        np.float64(15.625),
      ),
      tuple(
        np.float64(156.25),
        np.float64(84.0625),
      ),
      tuple(
        np.float64(157.5),
        np.float64(83.75),
      ),
      tuple(
        np.float64(158.75),
        np.float64(21.25),
      ),
      tuple(
        np.float64(167.0068359375),
        np.float64(70.8251953125),
      ),
      tuple(
        np.float64(166.875),
        np.float64(17.5),
      ),
      tuple(
        np.float64(173.125),
        np.float64(17.1875),
      ),
      tuple(
        np.float64(173.125),
        np.float64(65.9375),
      ),
      tuple(
        np.float64(175.875),
        np.float64(64.0),
      ),
      tuple(
        np.float64(176.80803571428572),
        np.float64(48.683035714285715),
      ),
      tuple(
        np.float64(177.34375),
        np.float64(61.25),
      ),
      tuple(
        np.float64(178.125),
        np.float64(53.75),
      ),
      tuple(
        np.float64(179.375),
        np.float64(45.625),
      ),
      tuple(
        np.float64(180.0),
        np.float64(53.125),
      ),
      tuple(
        np.float64(181.25),
        np.float64(45.0),
      ),
      tuple(
        np.float64(185.625),
        np.float64(71.5625),
      ),
      tuple(
        np.float64(186.875),
        np.float64(222.5),
      ),
      tuple(
        np.float64(190.625),
        np.float64(140.5),
      ),
      tuple(
        np.float64(196.32716049382717),
        np.float64(201.6718106995885),
      ),
      tuple(
        np.float64(190.9375),
        np.float64(152.1875),
      ),
      tuple(
        np.float64(190.625),
        np.float64(215.3125),
      ),
      tuple(
        np.float64(193.125),
        np.float64(140.0),
      ),
      tuple(
        np.float64(194.0625),
        np.float64(109.375),
      ),
      tuple(
        np.float64(195.06465517241378),
        np.float64(159.20258620689654),
      ),
      tuple(
        np.float64(199.921875),
        np.float64(237.29910714285714),
      ),
      tuple(
        np.float64(198.125),
        np.float64(245.9375),
      ),
      tuple(
        np.float64(199.47916666666666),
        np.float64(251.35416666666666),
      ),
      tuple(
        np.float64(200.625),
        np.float64(193.75),
      ),
      tuple(
        np.float64(200.625),
        np.float64(215.3125),
      ),
      tuple(
        np.float64(201.25),
        np.float64(169.0625),
      ),
      tuple(
        np.float64(204.375),
        np.float64(205.20833333333334),
      ),
      tuple(
        np.float64(205.625),
        np.float64(242.1875),
      ),
      tuple(
        np.float64(207.34375),
        np.float64(182.8125),
      ),
      tuple(
        np.float64(210.625),
        np.float64(231.5625),
      ),
      tuple(
        np.float64(211.25),
        np.float64(148.125),
      ),
      tuple(
        np.float64(211.40625),
        np.float64(203.75),
      ),
      tuple(
        np.float64(212.85714285714286),
        np.float64(230.53571428571428),
      ),
      tuple(
        np.float64(212.5),
        np.float64(257.5),
      ),
      tuple(
        np.float64(213.75),
        np.float64(235.625),
      ),
      tuple(
        np.float64(215.0),
        np.float64(205.0),
      ),
      tuple(
        np.float64(215.625),
        np.float64(187.5),
      ),
      tuple(
        np.float64(216.09375),
        np.float64(209.84375),
      ),
      tuple(
        np.float64(216.25),
        np.float64(188.75),
      ),
      tuple(
        np.float64(216.8181818181818),
        np.float64(236.5909090909091),
      ),
      tuple(
        np.float64(216.875),
        np.float64(170.0),
      ),
      tuple(
        np.float64(217.9934210526316),
        np.float64(211.2171052631579),
      ),
      tuple(
        np.float64(218.125),
        np.float64(268.4375),
      ),
      tuple(
        np.float64(219.375),
        np.float64(194.0625),
      ),
      tuple(
        np.float64(219.375),
        np.float64(206.875),
      ),
      tuple(
        np.float64(221.875),
        np.float64(209.375),
      ),
      tuple(
        np.float64(222.125),
        np.float64(211.375),
      ),
      tuple(
        np.float64(222.34375),
        np.float64(214.0625),
      ),
      tuple(
        np.float64(222.5),
        np.float64(196.875),
      ),
      tuple(
        np.float64(222.5),
        np.float64(309.375),
      ),
      tuple(
        np.float64(225.20833333333334),
        np.float64(271.4583333333333),
      ),
      tuple(
        np.float64(225.625),
        np.float64(270.0),
      ),
      tuple(
        np.float64(228.75),
        np.float64(271.875),
      ),
      tuple(
        np.float64(230.0),
        np.float64(263.4375),
      ),
      tuple(
        np.float64(230.625),
        np.float64(315.9375),
      ),
      tuple(
        np.float64(230.625),
        np.float64(317.5),
      ),
      tuple(
        np.float64(230.625),
        np.float64(318.75),
      ),
      tuple(
        np.float64(231.25),
        np.float64(272.5),
      ),
      tuple(
        np.float64(231.25),
        np.float64(278.75),
      ),
      tuple(
        np.float64(233.75),
        np.float64(364.375),
      ),
      tuple(
        np.float64(234.375),
        np.float64(315.625),
      ),
      tuple(
        np.float64(235.0),
        np.float64(260.9375),
      ),
      tuple(
        np.float64(235.625),
        np.float64(365.0),
      ),
      tuple(
        np.float64(235.625),
        np.float64(375.625),
      ),
      tuple(
        np.float64(236.875),
        np.float64(255.625),
      ),
      tuple(
        np.float64(236.875),
        np.float64(349.375),
      ),
      tuple(
        np.float64(236.875),
        np.float64(364.375),
      ),
      tuple(
        np.float64(244.375),
        np.float64(370.625),
      ),
      tuple(
        np.float64(248.125),
        np.float64(372.1875),
      ),
      tuple(
        np.float64(248.125),
        np.float64(375.9375),
      ),
      tuple(
        np.float64(249.58333333333334),
        np.float64(374.5833333333333),
      ),
      tuple(
        np.float64(252.5),
        np.float64(373.75),
      ),
    ]),
    list([
      tuple(
        np.float64(265.0),
        np.float64(42.5),
      ),
      tuple(
        np.float64(286.25),
        np.float64(24.375),
      ),
      tuple(
        np.float64(292.3076923076923),
        np.float64(14.85576923076923),
      ),
      tuple(
        np.float64(298.125),
        np.float64(40.625),
      ),
      tuple(
        np.float64(299.375),
        np.float64(33.125),
      ),
      tuple(
        np.float64(368.5515701479038),
        np.float64(108.8759742764418),
      ),
      tuple(
        np.float64(303.125),
        np.float64(9.375),
      ),
      tuple(
        np.float64(303.125),
        np.float64(12.1875),
      ),
      tuple(
        np.float64(304.375),
        np.float64(12.5),
      ),
      tuple(
        np.float64(319.375),
        np.float64(63.125),
      ),
      tuple(
        np.float64(323.75),
        np.float64(128.4375),
      ),
      tuple(
        np.float64(325.625),
        np.float64(61.875),
      ),
      tuple(
        np.float64(326.28472222222223),
        np.float64(127.53472222222223),
      ),
      tuple(
        np.float64(328.125),
        np.float64(126.25),
      ),
      tuple(
        np.float64(331.25),
        np.float64(137.1875),
      ),
      tuple(
        np.float64(340.625),
        np.float64(73.75),
      ),
      tuple(
        np.float64(340.625),
        np.float64(150.625),
      ),
      tuple(
        np.float64(343.125),
        np.float64(147.5),
      ),
      tuple(
        np.float64(344.375),
        np.float64(151.5625),
      ),
      tuple(
        np.float64(345.625),
        np.float64(162.8125),
      ),
      tuple(
        np.float64(346.875),
        np.float64(118.125),
      ),
      tuple(
        np.float64(346.875),
        np.float64(155.625),
      ),
      tuple(
        np.float64(358.8157894736842),
        np.float64(350.23026315789474),
      ),
      tuple(
        np.float64(358.125),
        np.float64(198.4375),
      ),
      tuple(
        np.float64(358.125),
        np.float64(200.625),
      ),
      tuple(
        np.float64(359.375),
        np.float64(194.6875),
      ),
      tuple(
        np.float64(360.0),
        np.float64(217.5),
      ),
      tuple(
        np.float64(360.0),
        np.float64(222.1875),
      ),
      tuple(
        np.float64(362.5),
        np.float64(313.4375),
      ),
      tuple(
        np.float64(363.75),
        np.float64(301.875),
      ),
      tuple(
        np.float64(371.55307112068965),
        np.float64(306.98006465517244),
      ),
      tuple(
        np.float64(368.75),
        np.float64(323.125),
      ),
      tuple(
        np.float64(370.0),
        np.float64(324.0625),
      ),
      tuple(
        np.float64(371.25),
        np.float64(327.15277777777777),
      ),
      tuple(
        np.float64(371.875),
        np.float64(298.125),
      ),
      tuple(
        np.float64(375.0),
        np.float64(286.875),
      ),
      tuple(
        np.float64(376.875),
        np.float64(280.9375),
      ),
      tuple(
        np.float64(377.25),
        np.float64(287.5),
      ),
      tuple(
        np.float64(378.4375),
        np.float64(314.6875),
      ),
      tuple(
        np.float64(379.625),
        np.float64(313.0),
      ),
      tuple(
        np.float64(380.0),
        np.float64(306.25),
      ),
      tuple(
        np.float64(380.0),
        np.float64(315.625),
      ),
      tuple(
        np.float64(380.625),
        np.float64(233.4375),
      ),
      tuple(
        np.float64(381.25),
        np.float64(311.125),
      ),
      tuple(
        np.float64(381.875),
        np.float64(265.625),
      ),
      tuple(
        np.float64(392.23796033994336),
        np.float64(345.6055240793201),
      ),
      tuple(
        np.float64(388.75),
        np.float64(386.5625),
      ),
      tuple(
        np.float64(395.26711618257264),
        np.float64(373.6177385892116),
      ),
      tuple(
        np.float64(390.0),
        np.float64(333.75),
      ),
      tuple(
        np.float64(390.0),
        np.float64(383.75),
      ),
      tuple(
        np.float64(391.25),
        np.float64(331.875),
      ),
      tuple(
        np.float64(391.5625),
        np.float64(366.5625),
      ),
      tuple(
        np.float64(392.5),
        np.float64(336.5625),
      ),
      tuple(
        np.float64(392.5),
        np.float64(338.4375),
      ),
      tuple(
        np.float64(396.875),
        np.float64(364.0625),
      ),
      tuple(
        np.float64(399.375),
        np.float64(343.4375),
      ),
    ]),
    list([
      tuple(
        np.float64(391.25),
        np.float64(8.75),
      ),
    ]),
  ])
# ---
# name: test_feret_diameter_maximum_pores[sample1]
  list([
    list([
      28256.663388993864,
    ]),
    list([
      1016.3759243170068,
      611.4248375975988,
      2567.7466296163743,
      6548.068208687582,
      262.0392161132566,
      398.3608994994363,
      87.34640537108554,
      174.69281074217108,
      436.73202685542765,
      1743.8683035585714,
      5097.918156586078,
      3367.7674964516555,
      210.35800027869158,
      5163.495146594625,
      39.0625,
      4992.670408959518,
      544.0776670775047,
      943.987966687076,
      4086.8411405158017,
      39.0625,
      8946.080070780303,
      250.12204052472066,
      87.34640537108554,
      39.0625,
      39.0625,
      1661.8787020455193,
      78.125,
      87.34640537108554,
      78.125,
      174.69281074217108,
      78.125,
      977.3434377497503,
      1991.8044974971815,
      123.52647110032731,
      161.05881350068987,
      1495.639821802863,
      2384.092893697989,
      2470.529422006546,
      468.75,
      1950.388708253114,
      117.1875,
      785.1465329000696,
      585.9375,
    ]),
    list([
      743.21474962658,
      2211.434352299713,
      6117.367095064776,
      841.4320011147663,
      3166.231895181163,
      4652.538894416951,
      769.4420157653207,
      4861.51605766208,
      891.6181414463537,
      237.6079113397742,
      4773.3032407469145,
      720.2769107260068,
      1288.470508005519,
      951.2340360848375,
      8605.549427958174,
      1620.5053525540266,
      805.2940675034494,
      778.3147986395029,
      123.52647110032731,
      161.05881350068987,
      625.0,
      1862.3433501656589,
      646.599428017455,
      664.0625,
      1631.2978920172734,
      2183.6601342771382,
      1806.1918783901394,
      704.2092334890604,
      594.9822738956178,
      741.1588266019639,
      509.3126879064569,
    ]),
    list([
      431.4594147338774,
      436.73202685542765,
      682.197234241132,
      39.0625,
      692.1892635417715,
      644.2352540027595,
      754.42218421203,
      767.4563556401758,
      606.4130740726572,
      471.993983343538,
      646.599428017455,
      856.7075077914574,
      531.3074417474783,
      617.6323555016365,
      758.4565562088906,
      445.38102542935076,
      568.7585851000405,
      436.73202685542765,
      682.197234241132,
      667.5002926029322,
      654.8068208687582,
      524.0784322265132,
      843.2434822235509,
      407.82447300431835,
      563.3673867912484,
      580.7058104421292,
      758.4565562088906,
      580.7058104421292,
      631.0740008360747,
      957.6289587602549,
      349.38562148434215,
      664.0625,
      559.2898852842326,
      174.69281074217108,
      544.0776670775047,
      682.197234241132,
      587.2381397801918,
      507.8125,
      815.6489460086367,
      544.0776670775047,
      87.34640537108554,
      349.38562148434215,
      864.6852977022912,
      559.2898852842326,
      1877.0334026146818,
      1572.7204796247966,
      161.05881350068987,
      210.35800027869158,
      790.9553410670542,
      1001.2504389043982,
      333.7501463014661,
      457.2148402624854,
      805.2940675034494,
      617.6323555016365,
      436.73202685542765,
      805.2940675034494,
      544.0776670775047,
      436.73202685542765,
      333.7501463014661,
      494.10588440130925,
      631.0740008360747,
      617.6323555016365,
      370.57941330098197,
    ]),
    list([
      39.0625,
    ]),
  ])
# ---
# name: test_feret_diameter_maximum_pores[sample2]
  list([
    list([
      565.2436559794369,
    ]),
    list([
      557.351788034272,
      18.97778306336122,
      1.25,
      1.25,
      0.625,
      3.1868871959954905,
      1.875,
      3.8017265814363874,
      4.375,
      7.551903733496608,
      1.25,
      0.625,
      1.25,
      3.125,
      1.25,
      1.25,
      0.625,
      3.365728004459065,
      0.625,
      0.625,
      3.1868871959954905,
      2.5,
      1.3975424859373686,
      7.5,
      1.25,
      1.875,
      1.25,
      0.625,
      0.625,
      0.625,
      1.875,
      0.625,
      0.625,
      6.875,
      3.1868871959954905,
      0.625,
      0.625,
      1.25,
      0.625,
      2.7950849718747373,
      5.038911092686593,
      2.5,
      0.625,
      0.625,
      1.25,
      2.5,
      3.1868871959954905,
      2.5,
      1.25,
      1.25,
      11.075028216668343,
      0.625,
      0.625,
      0.625,
      4.375,
      0.625,
      1.25,
      0.625,
      1.25,
      6.25,
      1.25,
      0.625,
      0.625,
      3.75,
      0.625,
      3.8017265814363874,
      0.625,
      0.625,
      1.3975424859373686,
      2.5,
      2.5,
      1.25,
      0.625,
      0.625,
      2.5,
      2.5,
    ]),
    list([
      1.25,
      0.625,
      5.762215285808055,
      1.25,
      470.3788366837947,
      5.0,
      1.25,
      0.625,
      0.625,
      1.25,
      0.625,
      0.625,
      12.13530489934225,
      0.625,
      1.25,
      1.25,
      2.576941016011038,
      9.395810236483067,
      1.875,
      0.625,
      2.2534695471649933,
      0.625,
      0.625,
      1.25,
      0.625,
      1.976423537605237,
      20.00976324197765,
      1.3975424859373686,
      2.5,
      0.625,
      1.25,
      9.395810236483067,
      14.429245475768994,
      2.5,
      3.125,
      0.625,
      2.5,
      1.25,
      2.7950849718747373,
      1.25,
      5.038911092686593,
      1.25,
      0.625,
      1.875,
      3.365728004459065,
      1.875,
      0.625,
      1.875,
      0.625,
      4.419417382415922,
      0.625,
      3.365728004459065,
      0.625,
      6.25,
      1.25,
      1.25,
      0.625,
      0.625,
      1.976423537605237,
      2.576941016011038,
      0.625,
      3.125,
      1.3975424859373686,
      0.625,
      0.625,
      1.25,
      1.25,
      0.625,
      0.625,
      3.125,
      0.625,
      0.625,
      1.875,
      1.25,
      0.625,
      1.875,
      0.625,
      0.625,
      0.625,
      0.625,
      1.25,
      2.5,
      1.3975424859373686,
      1.875,
    ]),
    list([
      0.625,
      0.625,
      5.659615711335886,
      0.625,
      0.625,
      323.0476212959941,
      0.625,
      2.5,
      0.625,
      0.625,
      1.25,
      0.625,
      5.762215285808055,
      0.625,
      3.75,
      0.625,
      0.625,
      0.625,
      1.25,
      1.25,
      0.625,
      3.125,
      8.338540040078959,
      2.5,
      0.625,
      1.25,
      0.625,
      2.5,
      1.25,
      0.625,
      25.194555463432966,
      0.625,
      1.25,
      3.6443449342783127,
      0.625,
      0.625,
      1.25,
      3.1868871959954905,
      5.038911092686593,
      1.976423537605237,
      0.625,
      1.875,
      1.25,
      2.2534695471649933,
      0.625,
      27.985766471547638,
      1.25,
      24.906073556464094,
      1.875,
      0.625,
      0.625,
      1.3975424859373686,
      1.25,
      1.25,
      1.25,
      1.25,
    ]),
    list([
      0.625,
    ]),
  ])
# ---
# name: test_sum_area_by_layer[sample1, min_size 10000]
  list([
    np.float64(399998474.12109375),
    np.float64(86811828.61328125),
    np.float64(59712219.23828125),
    np.float64(14396667.48046875),
    0,
  ])
# ---
# name: test_sum_area_by_layer[sample1, no min_size]
  list([
    np.float64(399998474.12109375),
    np.float64(86857604.98046875),
    np.float64(59719848.6328125),
    np.float64(14404296.875),
    np.float64(1525.87890625),
  ])
# ---
# name: test_sum_area_by_layer[sample2, min_size 10000, drop first and last]
  list([
    np.float64(135931.25),
    np.float64(74628.515625),
    np.float64(14684.375),
  ])
# ---
# name: test_sum_area_by_layer[sample2, no min_size]
  list([
    np.float64(159999.609375),
    np.float64(136148.4375),
    np.float64(74932.421875),
    np.float64(15160.9375),
    np.float64(0.390625),
  ])
# ---
